# canokey-pkcs11

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  canokey.c  canokey.h  pkcs11.c  pkcs11_session.c  pkcs11_session.h  test_pkcs11.c
.github/workflows/: build.yml
cmake/Modules/: AddMockedTest.cmake
include/: canokey.h  pcsc_canokey.h  pkcs11.h  pkcs11_canokey.h  pkcs11_managed.h  pkcs11_mutex.h  pkcs11_session.h
include/private/: logging.h  mbedtls_config_cnk.h  pcsc_backend.h  pkcs11_macros.h  pkcs11_mutex.h  pkcs11_obj.h  pkcs11_object.h  pkcs11_session.h  rsa_utils.h  utils.h
src/: canokey.c  logging.c  pcsc_backend.c  pcsc_canokey.c  pkcs11.c  pkcs11_canokey.c  pkcs11_core.c  pkcs11_crypto_ex.c  pkcs11_digesting.c  pkcs11_encryption.c  pkcs11_impl.c  pkcs11_managed.c  pkcs11_mutex.c  pkcs11_obj.c  pkcs11_object.c  pkcs11_session.c  pkcs11_signing.c  pkcs11_slot.c  rsa_utils.c  utils.c
test/: CMakeLists.txt  test_pkcs11.c  test_real.c  test_rsa.c  test_rsa_utils.c
test/real/: CMakeLists.txt  test_real.c
test/unit/: CMakeLists.txt  test_digest.c  test_rsa_utils.c
tests/: test_pkcs11.c  test_real.c
